Fix z-index

--- a/assets/front/scss/_global.scss
+++ b/assets/front/scss/_global.scss
@@ -10,6 +10,9 @@ body {
 			margin-top: 0 !important;
 		}
 	}
+	.container {
+		z-index: 2;
+	}
 }
 
 p {
